Testcontainers and Update Mono Dependencies (#32)
* Refactor PaymentsModule and update dependencies

Removed unused constants and services while modularizing Prisma and utility services. Added new dependencies and updated existing ones in package.json and yarn.lock to support these changes.

* Update package dependencies for rl-nestjs-mono project

Upgraded several dependencies to newer versions in package.json and yarn.lock files to address potential security vulnerabilities and ensure compatibility with latest versions. This includes updates for @nestjs, @faker-js, stripe, and prisma among others.

* Update Stripe API version to 2024-10-28.acacia

Upgraded the Stripe API version in `stripe.service.ts` and its corresponding test file to the latest version. This ensures compatibility with the latest features and fixes from Stripe.

* Add STRIPE_API_KEY to workflow environment variables

Included STRIPE_API_KEY in the environment variables for the test and SonarCloud analysis steps in the GitHub Actions workflow. This ensures that the necessary API key is available during the workflow execution.

* Add Stripe API key to test environment

Move STRIPE_API_KEY from SonarCloud Scan to Run Tests step to ensure the key is available during test execution. This modification prevents potential test failures due to missing environment variables.

--- a/.github/workflows/verify-node.yml
+++ b/.github/workflows/verify-node.yml
@@ -95,6 +95,8 @@ jobs:
       - name: Run Tests
         working-directory: ./web/backend/rl-nestjs-mono
         run: yarn run test:cov
+        env:
+          STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
